		Called after a player drops a card/pill onto the ground from their inventory.
	- MC_PRE_PLAYER_GIVE_BIRTH_CAMBION/IMMACULATE (EntityPlayer, CambionFamiliarFlag)
		Return false to cancel the familiar being added.
* EntityLaser:
	- GetDamageMultiplier()
	- SetDamageMultiplier(float Mult)
* EntityKnife:
	- GetIsSwinging()
	- SetIsSwinging(bool)
* Enums:
	- CambionFamiliarFlag
* Added a new option "Extra debug render for FindInRadius". While the DebugFlag.HITSPHERES flag is enabled, debug spheres will be rendered for FindInRadius/QueryRadius calls.
* RoomDescriptor.OverrideData is no longer forcibly changed by RoomDescriptor.FLAG_SURPRISE_MINIBOSS
/newline/
Modified:
* Isaac:
	PlayCutscene(CutsceneID, ClearGameState = false)
* Game:
	SetDizzyAmount(TargetIntensity, CurrentIntensity) - Providing CurrentIntensity is now optional
* EntityNPC:
	ShootMaggotProjectile(Position, Target, FallingSpeed = -8.0, YOffset = -24.0)
* Callbacks:
	- MC_PLAYER_GET_ACTIVE_MAX_CHARGE / MC_PLAYER_GET_ACTIVE_MIN_USABLE_CHARGE
		Will no longer run for empty active item slots.
		Now provide the current charge value as an argument.
		Returning a value no longer stops the callback, and changes the charge value passed to the next callback.
		If the final result of the callback is <0, the result is treated as 0.
* The game no longer prematurely ends the daily run if there was console input, instead blocking it
/newline/
Fixes:
* Game():GetDizzyAmount() now returns the intended value, instead of 0
* Fixed MC_PRE_PLANETARIUM_APPLY_TREASURE_PENALTY not providing the current number of treasure rooms visited.
* Fixed binders for EntityNPC: ThrowMaggot, ShootMaggotProjectile functions.
/newline/
v1.0.9d -
Fixes:
* Fixed a bug with the autoupdater
/newline/
v1.0.9c -
Fixes:
* Fixed a bug in 1.0.9b where all cutscenes were being replaced by the intro cutscene if any mods were enabled.
/newline/
v1.0.9b -
Additions:
* Camera:
	- IsPosVisible(position: Vector) : bool
* Game: