@@ -12,6 +12,7 @@ __thiscall void Entity_Knife::Constructor();
 
 struct Entity_Knife : public Entity {
 	bool _isSwinging : 0x3b5;
+	bool _isSpinAttack : 0x43a;
 
 	__vtable {
 		skip; // Free
