@@ -30,6 +30,18 @@ LUA_FUNCTION(Lua_SetIsSwinging) {
 	return 0;
 }
 
+LUA_FUNCTION(Lua_GetIsSpinAttack) {
+	Entity_Knife* knife = lua::GetUserdata<Entity_Knife*>(L, 1, lua::Metatables::ENTITY_KNIFE, "EntityKnife");
+	lua_pushboolean(L, knife->_isSpinAttack);
+	return 1;
+}
+
+LUA_FUNCTION(Lua_SetIsSpinAttack) {
+	Entity_Knife* knife = lua::GetUserdata<Entity_Knife*>(L, 1, lua::Metatables::ENTITY_KNIFE, "EntityKnife");
+	knife->_isSpinAttack = lua::luaL_checkboolean(L, 2);
+	return 0;
+}
+
 HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 	super();
 
@@ -39,6 +51,8 @@ HOOK_METHOD(LuaEngine, RegisterClasses, () -> void) {
 		{ "GetHitList", Lua_KnifeGetHitList },
 		{ "GetIsSwinging", Lua_GetIsSwinging },
 		{ "SetIsSwinging", Lua_SetIsSwinging },
+		{ "GetIsSpinAttack", Lua_GetIsSpinAttack },
+		{ "SetIsSpinAttack", Lua_SetIsSpinAttack },
 		{ NULL, NULL }
 	};
 	lua::RegisterFunctions(_state, lua::Metatables::ENTITY_KNIFE, functions);
