@@ -31,6 +31,8 @@ Additions:
 * EntityKnife:
 	- GetIsSwinging()
 	- SetIsSwinging(bool)
+	- GetIsSpinAttack()
+	- SetIsSpinAttack(bool)
 * Enums:
 	- CambionFamiliarFlag
 * Added a new option "Extra debug render for FindInRadius". While the DebugFlag.HITSPHERES flag is enabled, debug spheres will be rendered for FindInRadius/QueryRadius calls.
